--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -1,4 +1,4 @@
-name: Build - Develop
+name: Build - Develop (GHCR)
 
 on:
   workflow_dispatch:
@@ -6,56 +6,44 @@ on:
     branches:
       - develop
     paths:
-      - 'app/**'
-      - 'scripts/**'
-      - 'Dockerfile'
-      - 'requirements.txt'
+      - 'backend/**'
+      - 'frontend/**'
+      - 'infrastructure/**'
       - '.github/workflows/build-develop.yml'
-      # Exclude files that don't go into the container
-      - '!wiki/**'
-      - '!.claude/**'
-      - '!**/*.md'
-      - '!.gitignore'
-      - '!.dockerignore'
-      - '!docker-compose.yml'
 
-# Explicit permissions following principle of least privilege
 permissions:
-  contents: read         # Only read access needed for develop branch
-  packages: write        # Required for Docker Hub pushes
-  actions: write         # Required for cache operations
+  contents: read
+  packages: write
 
 env:
-  REGISTRY: docker.io
-  IMAGE_NAME: ryakel/tail-lookup
+  REGISTRY: ghcr.io
+  FRONTEND_IMAGE: ghcr.io/fliteaxis/truehour-frontend
+  API_IMAGE: ghcr.io/fliteaxis/truehour-api
 
 jobs:
-  # Build database once and share across all platform builds
-  build-database:
-    name: Build Database
+  prepare-database:
+    name: Prepare FAA Database
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
 
-      - name: Build database
+      - name: Build FAA database
         run: |
-          mkdir -p data
-          echo "Building fresh database for develop branch..."
-          pip install -q requests httpx
-          python scripts/update_faa_data.py data/aircraft.db
+          mkdir -p backend/data
+          pip install -q requests
+          python backend/scripts/update_faa_data.py backend/data/aircraft.db
 
       - name: Upload database artifact
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: aircraft-database
-          path: data/aircraft.db
+          path: backend/data/aircraft.db
           retention-days: 1
 
-  # Build each platform in parallel
-  build:
-    name: Build ${{ matrix.platform }}
-    needs: build-database
+  build-api:
+    name: Build API (${{ matrix.platform }})
+    needs: prepare-database
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -67,10 +55,10 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Download database artifact
-        uses: actions/download-artifact@v6
+        uses: actions/download-artifact@v4
         with:
           name: aircraft-database
-          path: data
+          path: backend/data
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -78,89 +66,205 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract platform name for cache
+      - name: Extract platform name
         id: platform
         run: echo "name=$(echo ${{ matrix.platform }} | sed 's/\//-/g')" >> $GITHUB_OUTPUT
 
       - name: Build and push by digest
         id: build
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v5
         with:
-          context: .
+          context: backend
+          file: backend/Dockerfile
           platforms: ${{ matrix.platform }}
-          outputs: type=image,name=${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
-          cache-from: type=gha,scope=build-${{ steps.platform.outputs.name }}
-          cache-to: type=gha,mode=max,scope=build-${{ steps.platform.outputs.name }}
+          outputs: type=image,name=${{ env.API_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=api-develop-${{ steps.platform.outputs.name }}
+          cache-to: type=gha,mode=max,scope=api-develop-${{ steps.platform.outputs.name }}
 
       - name: Export digest
         run: |
-          mkdir -p /tmp/digests
+          mkdir -p /tmp/digests-api
           digest="${{ steps.build.outputs.digest }}"
-          touch "/tmp/digests/${digest#sha256:}"
+          touch "/tmp/digests-api/${digest#sha256:}"
 
       - name: Upload digest
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ steps.platform.outputs.name }}
-          path: /tmp/digests/*
+          name: digests-api-${{ steps.platform.outputs.name }}
+          path: /tmp/digests-api/*
           if-no-files-found: error
           retention-days: 1
 
-  # Merge all platform images into a single manifest
-  merge:
-    name: Create Multi-Platform Manifest
+  build-frontend:
+    name: Build Frontend (${{ matrix.platform }})
     runs-on: ubuntu-latest
-    needs: build
+    strategy:
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract platform name
+        id: platform
+        run: echo "name=$(echo ${{ matrix.platform }} | sed 's/\//-/g')" >> $GITHUB_OUTPUT
+
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: infrastructure/Dockerfile.frontend
+          platforms: ${{ matrix.platform }}
+          outputs: type=image,name=${{ env.FRONTEND_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=gha,scope=frontend-develop-${{ steps.platform.outputs.name }}
+          cache-to: type=gha,mode=max,scope=frontend-develop-${{ steps.platform.outputs.name }}
+
+      - name: Export digest
+        run: |
+          mkdir -p /tmp/digests-frontend
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests-frontend/${digest#sha256:}"
+
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-frontend-${{ steps.platform.outputs.name }}
+          path: /tmp/digests-frontend/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge-api:
+    name: Create API Multi-Platform Manifest
+    runs-on: ubuntu-latest
+    needs: build-api
     steps:
       - name: Download digests
-        uses: actions/download-artifact@v6
+        uses: actions/download-artifact@v4
         with:
-          pattern: digests-*
-          path: /tmp/digests
+          pattern: digests-api-*
+          path: /tmp/digests-api
           merge-multiple: true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create manifest list and push
-        working-directory: /tmp/digests
+      - name: Get metadata
+        id: meta
+        run: |
+          echo "date=$(date -u +%Y-%m-%d)" >> $GITHUB_OUTPUT
+          echo "sha_short=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
+      - name: Create manifest and push
+        working-directory: /tmp/digests-api
         run: |
           docker buildx imagetools create \
-            --tag ${{ env.IMAGE_NAME }}:develop \
-            $(printf '${{ env.IMAGE_NAME }}@sha256:%s ' *)
+            --tag ${{ env.API_IMAGE }}:develop \
+            --tag ${{ env.API_IMAGE }}:develop-${{ steps.meta.outputs.date }} \
+            --tag ${{ env.API_IMAGE }}:develop-${{ steps.meta.outputs.sha_short }} \
+            $(printf '${{ env.API_IMAGE }}@sha256:%s ' *)
 
       - name: Inspect image
-        run: |
-          docker buildx imagetools inspect ${{ env.IMAGE_NAME }}:develop
+        run: docker buildx imagetools inspect ${{ env.API_IMAGE }}:develop
 
-      - name: Trigger Portainer webhook (optional)
-        continue-on-error: true
-        env:
-          WEBHOOK_URL: ${{ secrets.PORTAINER_WEBHOOK_URL_DEVELOP }}
+  merge-frontend:
+    name: Create Frontend Multi-Platform Manifest
+    runs-on: ubuntu-latest
+    needs: build-frontend
+    steps:
+      - name: Download digests
+        uses: actions/download-artifact@v4
+        with:
+          pattern: digests-frontend-*
+          path: /tmp/digests-frontend
+          merge-multiple: true
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get metadata
+        id: meta
         run: |
-          if [ -n "$WEBHOOK_URL" ]; then
-            curl -X POST "$WEBHOOK_URL"
-          fi
+          echo "date=$(date -u +%Y-%m-%d)" >> $GITHUB_OUTPUT
+          echo "sha_short=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
+      - name: Create manifest and push
+        working-directory: /tmp/digests-frontend
+        run: |
+          docker buildx imagetools create \
+            --tag ${{ env.FRONTEND_IMAGE }}:develop \
+            --tag ${{ env.FRONTEND_IMAGE }}:develop-${{ steps.meta.outputs.date }} \
+            --tag ${{ env.FRONTEND_IMAGE }}:develop-${{ steps.meta.outputs.sha_short }} \
+            $(printf '${{ env.FRONTEND_IMAGE }}@sha256:%s ' *)
+
+      - name: Inspect image
+        run: docker buildx imagetools inspect ${{ env.FRONTEND_IMAGE }}:develop
+
+  summary:
+    name: Build Summary
+    runs-on: ubuntu-latest
+    needs: [merge-api, merge-frontend]
+    steps:
+      - name: Get metadata
+        id: meta
+        run: |
+          echo "date=$(date -u +%Y-%m-%d)" >> $GITHUB_OUTPUT
+          echo "sha_short=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: Summary
         run: |
           echo "## Build Complete 🚀" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "| Info | Value |" >> $GITHUB_STEP_SUMMARY
-          echo "|------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| Branch | develop |" >> $GITHUB_STEP_SUMMARY
-          echo "| Commit | \`${{ github.sha }}\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Image | \`${{ env.IMAGE_NAME }}:develop\` |" >> $GITHUB_STEP_SUMMARY
-          echo "| Platforms | linux/amd64, linux/arm64 |" >> $GITHUB_STEP_SUMMARY
+          echo "| Component | Image |" >> $GITHUB_STEP_SUMMARY
+          echo "|-----------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| API | \`${{ env.API_IMAGE }}:develop\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Frontend | \`${{ env.FRONTEND_IMAGE }}:develop\` |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Pull Images" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
+          echo "docker pull ${{ env.API_IMAGE }}:develop" >> $GITHUB_STEP_SUMMARY
+          echo "docker pull ${{ env.FRONTEND_IMAGE }}:develop" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Run" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
+          echo "cd infrastructure" >> $GITHUB_STEP_SUMMARY
+          echo "docker-compose -f docker-compose.ghcr.yml pull" >> $GITHUB_STEP_SUMMARY
+          echo "docker-compose -f docker-compose.ghcr.yml up -d" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
