feat: Complete Phase 1 with unified API and comprehensive cleanup
- Integrate FAA lookup into unified TrueHour API backend
- Add nginx reverse proxy for frontend API requests (/api/*)
- Update all API endpoints from /tail-lookup-api/ to /api/
- Fix all references: tail-lookup → TrueHour/FAA lookup service
- Update backend docstrings, HTML titles, and User-Agent headers
- Complete Phase 1 documentation with ForeFlight import
- Add environment configuration with .env.example template
- Remove orphaned containers from old architecture
- All integration tests passing (direct + proxied API access)

Breaking changes:
- Consolidated tail-lookup service into main API
- Frontend now requires nginx proxy for API requests

Files changed: 19 (936 additions, 316 deletions)
Resolves Phase 1 migration to monorepo architecture

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -6,12 +6,14 @@ services:
       context: ..
       dockerfile: infrastructure/Dockerfile.frontend
     ports:
-      - "8181:80"
+      - "${APP_PORT:-8181}:80"
     depends_on:
       - api
     restart: unless-stopped
     networks:
       - truehour-network
+    env_file:
+      - .env
 
   api:
     build:
@@ -24,12 +26,15 @@ services:
     environment:
       - DATABASE_URL=postgresql://truehour:truehour@db:5432/truehour
       - CONFIG_PATH=/app/config/config.json
+      - ENABLE_FAA_LOOKUP=${ENABLE_FAA_LOOKUP:-false}
     depends_on:
       db:
         condition: service_healthy
     restart: unless-stopped
     networks:
       - truehour-network
+    env_file:
+      - .env
 
   db:
     image: postgres:16-alpine
