--- a/infrastructure/Dockerfile.frontend
+++ b/infrastructure/Dockerfile.frontend
@@ -6,8 +6,8 @@ RUN rm -rf /usr/share/nginx/html/*
 # Copy frontend files
 COPY frontend/ /usr/share/nginx/html/
 
-# Copy custom nginx config if needed (optional for Phase 0)
-# COPY infrastructure/nginx.conf /etc/nginx/conf.d/default.conf
+# Copy custom nginx config for API proxying
+COPY infrastructure/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
