fix: resolve all security and linting CI failures
- Fix date type shadowing in expenses.py router
- Remove Upgrade header forwarding to prevent H2C smuggling
- Correct cyclonedx-py SBOM generation arguments
- Add hadolint ignore rules for SARIF generation
- Create .env file for docker-compose validation
- Convert invalid button elements to semantic divs
- Enable Gitleaks to fail on secret detection with license

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -132,6 +132,7 @@ jobs:
 
       - name: Validate docker-compose.ghcr.yml
         run: |
+          touch infrastructure/.env
           docker compose -f infrastructure/docker-compose.ghcr.yml config > /dev/null
 
       - name: Lint with docker-compose-linter
