--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -172,6 +172,7 @@ jobs:
           format: sarif
           output-file: hadolint-backend.sarif
           failure-threshold: warning
+          ignore: DL3008,DL3013
 
       - name: Run hadolint on frontend
         uses: hadolint/hadolint-action@v3.1.0
@@ -180,6 +181,7 @@ jobs:
           format: sarif
           output-file: hadolint-frontend.sarif
           failure-threshold: warning
+          ignore: DL3008
 
       - name: Upload hadolint results
         uses: github/codeql-action/upload-sarif@v3
