--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [main, develop]
   pull_request:
-    types: [opened, synchronize, reopened]
   schedule:
     # Run daily at 2 AM EST (7 AM UTC)
     - cron: '0 7 * * *'
@@ -187,7 +186,7 @@ jobs:
 
       - name: Upload hadolint results
         uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        if: always() && hashFiles('hadolint-*.sarif') != ''
         with:
           sarif_file: |
             hadolint-backend.sarif
