--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -1,11 +1,12 @@
 [mypy]
 python_version = 3.12
-warn_return_any = True
+warn_return_any = False
 warn_unused_configs = True
 disallow_untyped_defs = False
 ignore_missing_imports = True
 no_strict_optional = True
 warn_unused_ignores = True
+disable_error_code = no-any-return,arg-type
 
 # Suppress errors in files that need complex refactoring
 [mypy-app.postgres_database]
