--- a/infrastructure/nginx.conf
+++ b/infrastructure/nginx.conf
@@ -16,7 +16,7 @@ server {
         proxy_pass http://api:8000;
         proxy_http_version 1.1;
 
-        # Security: Use explicitly configured server_name instead of $host
+        # Security: Use explicitly configured server_name
         # to prevent Host header injection attacks (H2C smuggling mitigation)
         # WebSocket is not used in this application
         proxy_set_header Host $server_name;
