--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -35,8 +35,8 @@ jobs:
           generateSarif: true
 
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        uses: github/codeql-action/upload-sarif@v4
+        if: always() && hashFiles('semgrep.sarif') != ''
         with:
           sarif_file: semgrep.sarif
 
@@ -53,16 +53,16 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@v4
         with:
           languages: ${{ matrix.language }}
           queries: security-extended,security-and-quality
 
       - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
+        uses: github/codeql-action/autobuild@v4
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@v4
         with:
           category: "/language:${{matrix.language}}"
 
@@ -144,7 +144,7 @@ jobs:
           vuln-type: 'os,library'
 
       - name: Upload Trivy results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: 'trivy-${{ matrix.image.name }}.sarif'
@@ -166,26 +166,26 @@ jobs:
 
       - name: Run hadolint on backend
         uses: hadolint/hadolint-action@v3.1.0
-        continue-on-error: true
         with:
           dockerfile: backend/Dockerfile
           format: sarif
           output-file: hadolint-backend.sarif
           failure-threshold: warning
           ignore: DL3008,DL3013
+          no-fail: true
 
       - name: Run hadolint on frontend
         uses: hadolint/hadolint-action@v3.1.0
-        continue-on-error: true
         with:
           dockerfile: infrastructure/Dockerfile.frontend
           format: sarif
           output-file: hadolint-frontend.sarif
           failure-threshold: warning
           ignore: DL3008
+          no-fail: true
 
       - name: Upload hadolint results
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always() && hashFiles('hadolint-*.sarif') != ''
         with:
           sarif_file: |
@@ -235,7 +235,7 @@ jobs:
           retention-days: 30
 
       - name: Upload SARIF to GitHub
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: reports/dependency-check-report.sarif
