--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -184,13 +184,17 @@ jobs:
           ignore: DL3008
           no-fail: true
 
-      - name: Upload hadolint results
+      - name: Upload hadolint backend results
         uses: github/codeql-action/upload-sarif@v4
-        if: always() && hashFiles('hadolint-*.sarif') != ''
+        if: always() && hashFiles('hadolint-backend.sarif') != ''
         with:
-          sarif_file: |
-            hadolint-backend.sarif
-            hadolint-frontend.sarif
+          sarif_file: hadolint-backend.sarif
+
+      - name: Upload hadolint frontend results
+        uses: github/codeql-action/upload-sarif@v4
+        if: always() && hashFiles('hadolint-frontend.sarif') != ''
+        with:
+          sarif_file: hadolint-frontend.sarif
 
   # Secrets scanning
   gitleaks:
