--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,33 @@
+# Build stage: Install build dependencies and compile extensions
+FROM python:3.12-slim as builder
+
+WORKDIR /app
+
+# Install build dependencies for asyncpg and other compiled packages
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir --user -r requirements.txt
+
+# Runtime stage: Minimal image with only runtime dependencies
 FROM python:3.12-slim as base
 
 WORKDIR /app
 
-# Install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install only runtime dependencies (not build tools)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq5 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy Python packages from builder
+COPY --from=builder /root/.local /root/.local
+
+# Make sure scripts in .local are usable
+ENV PATH=/root/.local/bin:$PATH
 
 # Copy application code
 COPY app/ ./app/
