fix(deps): Pin Python to 3.12.x - asyncpg incompatible with Python 3.13+
Block Python 3.13+ updates until asyncpg adds support. Attempted upgrade to 3.13
resulted in compilation failures during pip install of asyncpg.

Related: #7 (Dependency Dashboard - Python 3.14 update pending)

--- a/renovate.json
+++ b/renovate.json
@@ -42,6 +42,16 @@
   },
   "packageRules": [
     {
+      "description": "Pin Python to 3.12.x - asyncpg not compatible with 3.13+",
+      "matchDatasources": [
+        "docker"
+      ],
+      "matchPackageNames": [
+        "python"
+      ],
+      "allowedVersions": "3.12"
+    },
+    {
       "description": "Group Docker base images",
       "matchDatasources": [
         "docker"
