chore(deps): Update dependencies and fix pre-commit issues
Updated Python dependencies, GitHub Actions, and Docker base images
from Renovate issue #7. Rebuilt and tested all containers successfully.

Dependency Updates:
- fastapi: 0.122.0 → 0.124.2
- asyncpg: 0.29.0 → 0.30.0
- python-dotenv: 1.0.0 → 1.0.1
- docker/build-push-action: v5 → v6 (all workflows)
- DavidAnson/markdownlint-cli2-action: v18 → v19
- actions/setup-node: v4 → v5
- anchore/scan-action: v3 → v6
- actions/attest-sbom: v1 → v2
- postgres: 16-alpine → 18-alpine (all docker-compose files)

Pre-commit Fixes:
- Fix duplicate canvas ID 'budgetChart' in frontend/index.html
- Remove unused YELLOW variable in tmp/test_phase1_endpoints.sh

Testing:
- ✅ Containers rebuilt and running successfully
- ✅ PostgreSQL 18.1 verified operational
- ✅ API health checks passing
- ✅ All pre-commit checks passing

--- a/renovate.json
+++ b/renovate.json
@@ -9,10 +9,6 @@
   "branchPrefix": "renovate/",
   "username": "renovate[bot]",
   "gitAuthor": "Renovate Bot <bot@renovateapp.com>",
-  "platform": "github",
-  "repositories": [
-    "FliteAxis/TrueHour"
-  ],
   "labels": [
     "dependencies",
     "renovate"
@@ -157,37 +153,11 @@
       ]
     }
   ],
-  "pip_requirements": {
-    "managerFilePatterns": [
-      "/(^|/)requirements\\.txt$/"
-    ]
-  },
-  "dockerfile": {
-    "enabled": true
-  },
-  "docker-compose": {
-    "enabled": true,
-    "managerFilePatterns": [
-      "/(^|/)docker-compose.*\\.ya?ml$/"
-    ]
-  },
-  "github-actions": {
-    "enabled": true,
-    "managerFilePatterns": [
-      "/\\.github/workflows/.+\\.ya?ml$/"
-    ]
-  },
   "lockFileMaintenance": {
     "enabled": false
   },
   "minimumReleaseAge": "3 days",
   "prCreation": "not-pending",
-  "prNotPendingHours": 24,
-  "rebaseWhen": "behind-base-branch",
-  "enabledManagers": [
-    "pip_requirements",
-    "dockerfile",
-    "docker-compose",
-    "github-actions"
-  ]
+  "stabilityDays": 1,
+  "rebaseWhen": "behind-base-branch"
 }
