feat(flights): add comprehensive flight logging system
- implement flight tracking API with full CRUD operations
- add CSV import capability for expenses with budget card linking
- create hours recalculation engine for pilot certification tracking
- build automatic database migration system with schema versioning
- expand expense queries to include budget card associations via joins
- add development data reset endpoint for testing workflows
- integrate flight router into main application
- support complex flight time calculations (dual XC, towered ops, long XC)

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -53,9 +51,8 @@ services:
     restart: unless-stopped
     networks:
       - truehour-network
-      # Uncomment to access directly for debugging:
-      # ports:
-      #   - "5432:5432"
+    ports:
+      - "5432:5432"
 
 volumes:
   postgres_data:
